cmake_minimum_required(VERSION 3.0)
project(Events)
set(CMAKE_CXX_STANDARD 20)
find_package(SFML 2 COMPONENTS system window graphics)
set(SOURCES main.cpp main.cpp Application.cpp Application.hpp Window.cpp Window.hpp EventManager.cpp EventManager.hpp GUI/GUI_Event.hpp GUI/GUI_Manager.cpp GUI/GUI_Manager.hpp StateManager.cpp StateManager.hpp BaseState.cpp BaseState.hpp SharedContext.hpp MenuState.cpp MenuState.hpp Logger.cpp Logger.hpp GameState.cpp GameState.hpp ECS/EntityManager.cpp ECS/EntityManager.hpp ECS/SystemManager.cpp ECS/SystemManager.hpp Utils.cpp Utils.hpp GUI/GUI_Interface.cpp GUI/GUI_Interface.hpp GUI/GUI_Element.cpp GUI/GUI_Element.hpp GUI/GUI_Label.cpp GUI/GUI_Label.hpp GUI/GUI_Scrollbar.cpp GUI/GUI_Scrollbar.hpp GUI/GUI_Textfield.cpp GUI/GUI_Textfield.hpp GUI/GUI_Button.cpp GUI/GUI_Button.hpp GUI/GUI_Style.cpp GUI/GUI_Style.hpp ResourceManager.hpp TextureManager.cpp TextureManager.hpp)
add_executable(${PROJECT_NAME} ${SOURCES})
target_link_libraries(${PROJECT_NAME} sfml-system sfml-window sfml-graphics)